docs/api/qiskit/0.43/qiskit.circuit.library.PiecewiseLinearPauliRotations.mdx
---
title: PiecewiseLinearPauliRotations
description: API reference for qiskit.circuit.library.PiecewiseLinearPauliRotations
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.PiecewiseLinearPauliRotations
---

# PiecewiseLinearPauliRotations

<Class id="qiskit.circuit.library.PiecewiseLinearPauliRotations" github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/circuit/library/arithmetic/piecewise_linear_pauli_rotations.py" signature="PiecewiseLinearPauliRotations(num_state_qubits=None, breakpoints=None, slopes=None, offsets=None, basis='Y', name='pw_lin')">
  Bases: [`FunctionalPauliRotations`](qiskit.circuit.library.FunctionalPauliRotations "qiskit.circuit.library.arithmetic.functional_pauli_rotations.FunctionalPauliRotations")

  Piecewise-linearly-controlled Pauli rotations.

  For a piecewise linear (not necessarily continuous) function $f(x)$, which is defined through breakpoints, slopes and offsets as follows. Suppose the breakpoints $(x_0, ..., x_J)$ are a subset of $[0, 2^n-1]$, where $n$ is the number of state qubits. Further on, denote the corresponding slopes and offsets by $a_j$ and $b_j$ respectively. Then f(x) is defined as:

  $$
  \begin{split}f(x) = \begin{cases}
      0, x < x_0 \\
      a_j (x - x_j) + b_j, x_j \leq x < x_{j+1}
      \end{cases}\end{split}
  $$

  where we implicitly assume $x_{J+1} = 2^n$.

  Construct piecewise-linearly-controlled Pauli rotations.

  **Parameters**

  *   **num\_state\_qubits** (*int | None*) – The number of qubits representing the state.
  *   **breakpoints** (*list\[int] | None*) – The breakpoints to define the piecewise-linear function. Defaults to `[0]`.
  *   **slopes** (*list\[float] | np.ndarray | None*) – The slopes for different segments of the piecewise-linear function. Defaults to `[1]`.
  *   **offsets** (*list\[float] | np.ndarray | None*) – The offsets for different segments of the piecewise-linear function. Defaults to `[0]`.
  *   **basis** (*str*) – The type of Pauli rotation (`'X'`, `'Y'`, `'Z'`).
  *   **name** (*str*) – The name of the circuit.

  ## Methods Defined Here

  <span id="qiskit-circuit-library-piecewiselinearpaulirotations-evaluate" />

  ### evaluate

  <Function id="qiskit.circuit.library.PiecewiseLinearPauliRotations.evaluate" name="evaluate" signature="PiecewiseLinearPauliRotations.evaluate(x)">
    Classically evaluate the piecewise linear rotation.

    **Parameters**

    **x** (*float*) – Value to be evaluated at.

    **Returns**

    Value of piecewise linear function at x.

    **Return type**

    float
  </Function>

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.ancillas" name="ancillas">
    Returns a list of ancilla bits in the order that the registers were added.
  </Attribute>

  ### basis

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.basis" name="basis">
    The kind of Pauli rotation to be used.

    Set the basis to ‘X’, ‘Y’ or ‘Z’ for controlled-X, -Y, or -Z rotations respectively.

    **Returns**

    The kind of Pauli rotation used in controlled rotation.
  </Attribute>

  ### breakpoints

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.breakpoints" name="breakpoints">
    The breakpoints of the piecewise linear function.

    The function is linear in the intervals `[point_i, point_{i+1}]` where the last point implicitly is `2**(num_state_qubits + 1)`.
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.calibrations" name="calibrations">
    Return calibration dictionary.

    The custom pulse definition of a given gate is of the form `{'gate_name': {(qubits, params): schedule}}`
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.clbits" name="clbits">
    Returns a list of classical bits in the order that the registers were added.
  </Attribute>

  ### contains\_zero\_breakpoint

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.contains_zero_breakpoint" name="contains_zero_breakpoint">
    Whether 0 is the first breakpoint.

    **Returns**

    True, if 0 is the first breakpoint, otherwise False.
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.data" name="data" />

  ### extension\_lib

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.extension_lib" name="extension_lib" attributeValue="= 'include &#x22;qelib1.inc&#x22;;'" />

  ### global\_phase

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.global_phase" name="global_phase">
    Return the global phase of the circuit in radians.
  </Attribute>

  ### header

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.header" name="header" attributeValue="= 'OPENQASM 2.0;'" />

  ### instances

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.instances" name="instances" attributeValue="= 212" />

  ### layout

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.layout" name="layout">
    Return any associated layout information anout the circuit

    This attribute contains an optional [`TranspileLayout`](qiskit.transpiler.TranspileLayout "qiskit.transpiler.TranspileLayout") object. This is typically set on the output from [`transpile()`](qiskit.compiler.transpile "qiskit.compiler.transpile") or [`PassManager.run()`](qiskit.transpiler.PassManager#run "qiskit.transpiler.PassManager.run") to retain information about the permutations caused on the input circuit by transpilation.

    There are two types of permutations caused by the [`transpile()`](qiskit.compiler.transpile "qiskit.compiler.transpile") function, an initial layout which permutes the qubits based on the selected physical qubits on the [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target"), and a final layout which is an output permutation caused by [`SwapGate`](qiskit.circuit.library.SwapGate "qiskit.circuit.library.SwapGate")s inserted during routing.
  </Attribute>

  ### mapped\_offsets

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.mapped_offsets" name="mapped_offsets">
    The offsets mapped to the internal representation.

    **Returns**

    The mapped offsets.
  </Attribute>

  ### mapped\_slopes

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.mapped_slopes" name="mapped_slopes">
    The slopes mapped to the internal representation.

    **Returns**

    The mapped slopes.
  </Attribute>

  ### metadata

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.metadata" name="metadata">
    The user provided metadata associated with the circuit.

    The metadata for the circuit is a user provided `dict` of metadata for the circuit. It will not be used to influence the execution or operation of the circuit, but it is expected to be passed between all transforms of the circuit (ie transpilation) and that providers will associate any circuit metadata with the results it returns from execution of that circuit.
  </Attribute>

  ### num\_ancilla\_qubits

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.num_ancilla_qubits" name="num_ancilla_qubits">
    The minimum number of ancilla qubits in the circuit.

    **Returns**

    The minimal number of ancillas required.
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.num_ancillas" name="num_ancillas">
    Return the number of ancilla qubits.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.num_clbits" name="num_clbits">
    Return number of classical bits.
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.num_parameters" name="num_parameters" />

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.num_qubits" name="num_qubits">
    Return number of qubits.
  </Attribute>

  ### num\_state\_qubits

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.num_state_qubits" name="num_state_qubits">
    The number of state qubits representing the state $|x\rangle$.

    **Returns**

    The number of state qubits.
  </Attribute>

  ### offsets

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.offsets" name="offsets">
    The breakpoints of the piecewise linear function.

    The function is linear in the intervals `[point_i, point_{i+1}]` where the last point implicitly is `2**(num_state_qubits + 1)`.
  </Attribute>

  ### op\_start\_times

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.op_start_times" name="op_start_times">
    Return a list of operation start times.

    This attribute is enabled once one of scheduling analysis passes runs on the quantum circuit.

    **Returns**

    List of integers representing instruction start times. The index corresponds to the index of instruction in `QuantumCircuit.data`.

    **Raises**

    **AttributeError** – When circuit is not scheduled.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.parameters" name="parameters" />

  ### prefix

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.prefix" name="prefix" attributeValue="= 'circuit'" />

  ### qregs

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.qregs" name="qregs" attributeTypeHint="list[QuantumRegister]">
    A list of the quantum registers associated with the circuit.
  </Attribute>

  ### qubits

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.qubits" name="qubits">
    Returns a list of quantum bits in the order that the registers were added.
  </Attribute>

  ### slopes

  <Attribute id="qiskit.circuit.library.PiecewiseLinearPauliRotations.slopes" name="slopes">
    The breakpoints of the piecewise linear function.

    The function is linear in the intervals `[point_i, point_{i+1}]` where the last point implicitly is `2**(num_state_qubits + 1)`.
  </Attribute>
</Class>

